[gd_scene load_steps=16 format=2]

[ext_resource path="res://fonts/FreeSans.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/FreeSansBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://images/icons/lcd_addresses/addr6.png" type="Texture" id=3]
[ext_resource path="res://ui/components/UILcd16x2Config/UILcd16x2Config.gd" type="Script" id=4]
[ext_resource path="res://ui/panel_style.tres" type="StyleBox" id=5]
[ext_resource path="res://images/icons/lcd_addresses/addr3.png" type="Texture" id=6]
[ext_resource path="res://images/icons/lcd_addresses/addr4.png" type="Texture" id=7]
[ext_resource path="res://images/icons/lcd_addresses/addr5.png" type="Texture" id=8]
[ext_resource path="res://images/icons/lcd_addresses/addr0.png" type="Texture" id=9]
[ext_resource path="res://images/icons/lcd_addresses/addr1.png" type="Texture" id=10]
[ext_resource path="res://images/icons/lcd_addresses/addr2.png" type="Texture" id=11]
[ext_resource path="res://images/icons/lcd_addresses/addr7.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 10
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=13]
size = 10
use_filter = true
extra_spacing_top = -4
extra_spacing_bottom = -4
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 12
use_filter = true
extra_spacing_top = -4
extra_spacing_bottom = -4
font_data = ExtResource( 1 )

[node name="UILcd16x2Config" type="Panel"]
margin_right = 558.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
custom_styles/panel = ExtResource( 5 )
script = ExtResource( 4 )

[node name="LabelTitle" type="Label" parent="."]
margin_left = 6.5
margin_top = 5.0
margin_right = 28.5
margin_bottom = 18.0
custom_colors/font_color = Color( 0.501961, 0.627451, 0.74902, 1 )
custom_fonts/font = SubResource( 1 )
text = "LCD 16x2"

[node name="LabelEnabled" type="Label" parent="."]
margin_left = 94.5
margin_top = 13.0
margin_right = 145.5
margin_bottom = 26.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 13 )
text = "Enabled"

[node name="BtnEnabled" type="CheckButton" parent="."]
margin_left = 78.0
margin_top = 21.0
margin_right = 154.0
margin_bottom = 61.0

[node name="LabelAddress" type="Label" parent="."]
margin_left = 190.5
margin_top = 13.0
margin_right = 241.5
margin_bottom = 26.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 13 )
text = "LCD Board"

[node name="BtnAddress" type="OptionButton" parent="."]
margin_left = 190.0
margin_top = 26.0
margin_right = 277.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 6 )
text = "0"
icon = ExtResource( 9 )
align = 1
items = [ "0", ExtResource( 9 ), false, 0, null, "1", ExtResource( 10 ), false, 1, null, "2", ExtResource( 11 ), false, 2, null, "3", ExtResource( 6 ), false, 3, null, "4", ExtResource( 7 ), false, 4, null, "5", ExtResource( 8 ), false, 5, null, "6", ExtResource( 3 ), false, 6, null, "7", ExtResource( 12 ), false, 7, null ]
selected = 0

[node name="LabelLcdNum" type="Label" parent="."]
margin_left = 318.5
margin_top = 13.0
margin_right = 377.5
margin_bottom = 26.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 13 )
text = "LCD Number"

[node name="BtnLcdNum" type="SpinBox" parent="."]
margin_left = 318.0
margin_top = 29.0
margin_right = 392.0
margin_bottom = 53.0
max_value = 7.0
rounded = true
align = 1
editable = false
